--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <title>HelloWorld</title>
-        <script type="text/javascript" src="bundle.js"></script>
+        <link  rel="stylesheet" href="css/main.css" />
     </head>
-
+    <body>
+        <script type="text/javascript" src="bundle.js"></script>
+    </body>
 </html>
