--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link  rel="stylesheet" href="css/main.css" />
     </head>
     <body>
+        <div id="root"></div>
         <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
