--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>HelloWorld</title>
-        <link  rel="stylesheet" href="css/main.css" />
+        <!--<link  rel="stylesheet" href="css/main.css" />-->
     </head>
     <body>
         <div id="root"></div>
